// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONReporter.activity 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"activityStart\\",\\"data\\":{\\"id\\":0}}
{\\"type\\":\\"activityTick\\",\\"data\\":{\\"id\\":0,\\"name\\":\\"foo\\"}}
{\\"type\\":\\"activityTick\\",\\"data\\":{\\"id\\":0,\\"name\\":\\"bar\\"}}
{\\"type\\":\\"activityEnd\\",\\"data\\":{\\"id\\":0}}",
}
`;

exports[`JSONReporter.activity 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`JSONReporter.auditAction 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"auditAction\\",\\"data\\":{\\"cmd\\":\\"yarn upgrade gulp@4.0.0\\",\\"isBreaking\\":true,\\"action\\":{\\"action\\":\\"install\\",\\"module\\":\\"gulp\\",\\"target\\":\\"4.0.0\\",\\"isMajor\\":true,\\"resolves\\":[]}}}",
}
`;

exports[`JSONReporter.auditAdvisory 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"auditAdvisory\\",\\"data\\":{\\"resolution\\":{\\"id\\":118,\\"path\\":\\"gulp>vinyl-fs>glob-stream>minimatch\\",\\"dev\\":false,\\"optional\\":false,\\"bundled\\":false},\\"advisory\\":{\\"findings\\":[{\\"bundled\\":false,\\"optional\\":false,\\"dev\\":false,\\"paths\\":[],\\"version\\":\\"\\"}],\\"id\\":118,\\"created\\":\\"2016-05-25T16:37:20.000Z\\",\\"updated\\":\\"2018-03-01T21:58:01.072Z\\",\\"deleted\\":null,\\"title\\":\\"Regular Expression Denial of Service\\",\\"found_by\\":{\\"name\\":\\"Nick Starke\\"},\\"reported_by\\":{\\"name\\":\\"Nick Starke\\"},\\"module_name\\":\\"minimatch\\",\\"cves\\":[\\"CVE-2016-10540\\"],\\"vulnerable_versions\\":\\"<=3.0.1\\",\\"patched_versions\\":\\">=3.0.2\\",\\"overview\\":\\"\\",\\"recommendation\\":\\"Update to version 3.0.2 or later.\\",\\"references\\":\\"\\",\\"access\\":\\"public\\",\\"severity\\":\\"high\\",\\"cwe\\":\\"CWE-400\\",\\"metadata\\":{\\"module_type\\":\\"Multi.Library\\",\\"exploitability\\":4,\\"affected_components\\":\\"\\"},\\"url\\":\\"https://nodesecurity.io/advisories/118\\"}}}",
}
`;

exports[`JSONReporter.auditSummary 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"auditSummary\\",\\"data\\":{\\"vulnerabilities\\":{\\"info\\":0,\\"low\\":1,\\"moderate\\":0,\\"high\\":4,\\"critical\\":0},\\"dependencies\\":29105,\\"devDependencies\\":0,\\"optionalDependencies\\":0,\\"totalDependencies\\":29105}}",
}
`;

exports[`JSONReporter.command 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"command\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.error 1`] = `
Object {
  "stderr": "{\\"type\\":\\"error\\",\\"data\\":\\"foobar\\"}",
  "stdout": "",
}
`;

exports[`JSONReporter.footer 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"finished\\",\\"data\\":0}",
}
`;

exports[`JSONReporter.info 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"info\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.log 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"log\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.progress 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"progressStart\\",\\"data\\":{\\"id\\":0,\\"total\\":2}}
{\\"type\\":\\"progressTick\\",\\"data\\":{\\"id\\":0,\\"current\\":1}}
{\\"type\\":\\"progressTick\\",\\"data\\":{\\"id\\":0,\\"current\\":2}}
{\\"type\\":\\"progressFinish\\",\\"data\\":{\\"id\\":0}}",
}
`;

exports[`JSONReporter.progress 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`JSONReporter.step 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"step\\",\\"data\\":{\\"message\\":\\"foobar\\",\\"current\\":1,\\"total\\":5}}",
}
`;

exports[`JSONReporter.success 1`] = `
Object {
  "stderr": "",
  "stdout": "{\\"type\\":\\"success\\",\\"data\\":\\"foobar\\"}",
}
`;

exports[`JSONReporter.warn 1`] = `
Object {
  "stderr": "{\\"type\\":\\"warning\\",\\"data\\":\\"foobar\\"}",
  "stdout": "",
}
`;
